--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,9 @@
     <string name="question_americas">americas</string>
     <string name="question_asia">wode\'asia</string>
     <string name="next_button">Next</string>
-    <string name="pre_button">Prev</string>
+    <string name="warning_text">Are you sure you want to do this</string>
+    <string name="show_answer_button">Show Answer</string>
+    <string name="cheat_button">Cheat!</string>
+    <string name="judgment_toast">Cheating is wrong.</string>`
+    <string name="pre_button">Pre</string>
 </resources>
